--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
         console.log("symbolType:", typeof symbolType);        // symbol
         console.log("bigintType:", typeof bigintType);        // bigint
     </script>
+    <script src="3.2.js"></script>
+    <script src="3.3.js"></script>
 </body>
 </html>
